--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/albin/mathapi#readme",
   "dependencies": {
+    "body-parser": "1.15.0",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "express": "^4.13.4"
