--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,13 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .idea/
-#For VisualStudoCode
+#For VisualStudio
 typings/
+.vscode/
+.vs/
+[Oo]bj/
+[Bb]in/
+*.njsproj
+*.sln
+# Node.js Tools for Visual Studio
+.ntvs_analysis.dat
